--- a/style.css
+++ b/style.css
@@ -47,6 +47,20 @@ body {
     background-color: #f7f7f7 !important;
 }
 
+.card-finished{
+    background-image: url("img/tropy.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 15%;
+    width: 50vw;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 5%;
+    background-color: #f7f7f7 !important;
+}
+
 h3 {
     font-weight: 500 !important;
 }
@@ -74,4 +88,14 @@ h4 {
 .nav-btn:hover {
     background-color: #0d6efd;
     cursor: pointer;
+}
+
+.img-completed{
+    height: 7rem;
+    width: 7rem;
+    object-fit: cover;
+}
+
+.d-grid button{
+    width: 10rem;
 }
